Funcionalidades para clientes, asesores y tarjetas, actualizar swagger, correguir respuestas HTTP
